完善保留原始文件名时软链的建立方法